# homework_22

./: README.md  catalog_fixture.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_description.py  0003_alter_category_description_alter_product_description_and_more.py  0004_address.py
catalog/templates/catalog/: contacts.html  home.html
config/: settings.py  urls.py
